fix card header spacing (closes S#4354)

--- a/app/assets/stylesheets/training_modules/_cards.styl
+++ b/app/assets/stylesheets/training_modules/_cards.styl
@@ -13,9 +13,9 @@
 .icon-container
   background $training_primary_dk
   float right
-  padding 10px
-  width 45px
-  height 45px
+  padding 13px 10px
+  width 50px
+  height 50px
 .action-card-icon
   transition left 0.125s
   color #fff
@@ -27,7 +27,7 @@
     top 1px
 .action-card-header
   padding 0
-  height 45px
+  height 50px
   text-align left
   background $training_primary
   transition background 0.075s
@@ -36,8 +36,8 @@
   color $btn_text_color
   font-weight 400
   float left
-  padding 12px
-  width 90%
+  padding 15px 12px
+  width 89%
   font-size 18px
   @extends .truncated-text
 .action-card-text
